LPS-80767 Add minimum height for the editable fields to prevent them from collapse

--- a/modules/apps/layout/layout-admin-web/src/main/resources/META-INF/resources/css/fragments_editor/FragmentEntryLinkEditables.scss
+++ b/modules/apps/layout/layout-admin-web/src/main/resources/META-INF/resources/css/fragments_editor/FragmentEntryLinkEditables.scss
@@ -8,6 +8,7 @@ $translatedColor: #3DC513;
 	box-shadow: 0 0 0 1px transparent;
 	cursor: pointer;
 	display: block;
+	min-height: 25px;
 	position: relative;
 	transition: box-shadow ease 0.2s;
 
